# mclattice2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DestrOut.txt  DestrOut2.txt  Makefile  OptimzeOut.txt  OptimzeOut2.txt  analyseFreeEnergie.py  analyseOptimization.py  cmake_install.cmake  compile_commands.json  fitParameterArchive.txt  fitParameters.prm  fitParameters.txt  in.txt  in_copy.txt  log.txt  mclattice2  mclattice2.kdev4  pic_runs.sh  read.py  sizes.py  tmp
.kdev4/: mclattice2.kdev4
lib/: enhance.cpp  enhance.hpp
parameters/: create_fitparameterfile.py  fitparameters_DPPC.txt  fitparameters_DUPC.txt  fitparameters_ECC_Nc.txt  fitparameters_EPLC.txt  fitparameters_EPLC_Nc.txt  fitparameters_EPLPL.txt  fitparameters_EPLPL_Nc.txt  fitparameters_Ncs.txt  fitparameters_Nfits_Nc_DPPC.txt  fitparameters_NofT_CHOL-DPPC.txt  fitparameters_NofT_CHOL-DUPC.txt  fitparameters_NofT_DUPC.txt  fitparameters_NofT_Nc_CHOL-DPPC.txt  fitparameters_NofT_Nc_CHOL-DUPC.txt  fitparameters_NofT_Nc_DUPC.txt  fitparameters_entropy.txt  fitparameters_selfE.txt  parameters.prm  test.prm
src/: main.cpp
src/IO/: .inputfile.h.kate-swp  datafile.cpp  datafile.h  inputfile.cpp  inputfile.h
src/system/: .typeproperties.h.kate-swp  cholesterin.cpp  cholesterin.h  cholesterinsystem.cpp  cholesterinsystem.h  datafile.cpp  datafile.h  inputfile.cpp  inputfile.h  lipid.cpp  lipid.h  lipidproperties.cpp  lipidproperties.h  lipidsystem.cpp  lipidsystem.h  mchost.cpp  mchost.h  omegaoptimizer.cpp  omegaoptimizer.h  typeproperties.cpp  typeproperties.h
